fix for collapsing menu

--- a/qdrant_sphinx_theme/static/css/theme.css
+++ b/qdrant_sphinx_theme/static/css/theme.css
@@ -13797,7 +13797,7 @@ article.pytorch-article .tutorials-callout-container .btn.callout-button a {
 
 .pytorch-left-menu p.caption {
   display: block;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   text-transform: none;
   white-space: normal;
   border-radius: 6px;
@@ -13808,12 +13808,13 @@ article.pytorch-article .tutorials-callout-container .btn.callout-button a {
   font-style: normal;
   font-weight: 600;
   line-height: 1.25rem;
-  letter-spacing: 0px;
+  letter-spacing: 0;
   text-align: left;
 }
 .pytorch-left-menu p.caption:hover {
   background-color: #F6F8FB;
   color: #bc1439;
+  cursor: pointer;
 }
 
 .pytorch-left-menu-search {
@@ -14092,7 +14093,7 @@ article.pytorch-article .tutorials-callout-container .btn.callout-button a {
   padding-left: 0;
 }
 .pytorch-right-menu ul ul li {
-  padding-left: 0px;
+  padding-left: 0;
 }
 .pytorch-right-menu ul ul li a.reference.internal {
   padding-left: 0;
