--- a/scss/_sphinx_layout.scss
+++ b/scss/_sphinx_layout.scss
@@ -172,7 +172,7 @@
 
 .pytorch-left-menu p.caption {
   display: block;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   text-transform: none;
   white-space: normal;
   border-radius: 6px;
@@ -184,12 +184,12 @@
   font-style: normal;
   font-weight: 600;
   line-height: rem(20px);
-  letter-spacing: 0px;
+  letter-spacing: 0;
   text-align: left;
 
   &:hover {
-    background-color: #EFEEFF;
-    color: #4F00BA;
+    background-color: #F6F8FB;
+    color: #bc1439;
   }
 }
 
@@ -533,7 +533,7 @@
     padding-left: 0;
 
     li {
-      padding-left: 0px;
+      padding-left: 0;
 
       a.reference.internal {
         padding-left: 0;
